--- a/src/pages/hackathons/mofa-search-detail.astro
+++ b/src/pages/hackathons/mofa-search-detail.astro
@@ -24,15 +24,15 @@ const metadata = {
       {
         title: '大风起兮云飞扬',
         description:
-          '时代变革：在这个技术革命风起云涌的时代，我们正站在一个重新定义搜索范式的历史性节点。传统搜索引擎巨头如Google、依托强大的互联网内容爬取技术建立了庞大的搜索帝国，但其固有的商业模式和技术架构正面临前所未有的挑战；新贵搜索引擎如Perplexity和OpenAI的SearchGPT，也同样向网页不断发出繁忙的爬虫。',
+          '时代变革：在这个AI技术革命风起云涌的时代，我们正站在一个重新定义搜索范式的历史性节点。传统搜索引擎巨头如Google、依托强大的互联网内容爬取技术建立了庞大的搜索帝国，但其固有的商业模式和技术架构正面临前所未有的挑战；新贵搜索引擎如Perplexity和OpenAI的SearchGPT，也同样向网页不断发出繁忙的爬虫。',
       },
       {
-        title: 'Web搜索挖宝藏',
+        title: '搜索不再平静浪',
         description:
           '当前搜索领域存在三大核心痛点：首先，以广告为主导的商业模式严重制约了内容生态的健康发展，内容提供者的价值得不到充分尊重，这直接导致了优质内容的稀缺；其次，现有搜索引擎仅能触及互联网表层4%的内容，而占据90%以上的深层网络资源仍处于’搜索盲区‘；最后，无论是内容提供者还是消费者，都面临着日益复杂的搜索环境和使用门槛。',
       },
       {
-        title: '安得魔法师镇四方',
+        title: '安得魔法师震四方',
         description:
           '然而，AI智能体技术的突破为我们带来了革命性的解决方案。通过部署先进的AI智能体系统，我们能够构建一个真正智能化、人性化的搜索生态。这些智能体不仅能够代表内容消费者精准获取所需信息，更能协助内容提供者优化内容呈现，实现双向赋能。这种创新模式将彻底改变搜索领域的游戏规则，为内容生态注入新的活力，开启搜索技术的新纪元。',
       },
@@ -128,19 +128,9 @@ const metadata = {
         icon: 'tabler:users',
       },
       {
-        title: '2025.03.14 20:00',
-        description: '赛题公布',
+        title: '2025.03.14 20:00 - 21:30',
+        description: '赛题公布，赛事启动会',
         icon: 'tabler:presentation',
-      },
-      { 
-        title: '2025.03.14 20:00 ~ 21:30',
-        description: '线上讲座',
-        icon: 'tabler:users-group',
-      },
-      {
-        title: '2025.03.14 23:59:59',
-        description: '报名截止',
-        icon: 'tabler:user-off',
       },
       {
         title: '2025.03.15 ～ 2025.03.30',
@@ -176,24 +166,19 @@ const metadata = {
     title="黑客松比赛期间举办的活动"
     items={[
       {
-        title: '3月7日 20:00 魔法学院 - 魔法框架 MoFA Quick Start',
-        description:
-          'MoFA框架介绍；MoFA框架快速上手（包括：安装，部署和应用，',
-      },
-      {
-        title: '3月14日 20:00 魔法学院 - 用MoFA开发您的智能体',
+        title: '3月15日 20:00 魔法学院 - 用MoFA开发您的智能体',
         description:
           '以多个案例展示如何开发MoFA智能体',
       },      
       {
-        title: '3月15日 20:00 魔法学院 - Moly & Dora介绍',
-        description:
-          'Moly为MoFA提供了用户界面，Dora为MoFA提供了分布式计算能力',
-      },
-      {
         title: '3月15日 21:00 Office Hour',
         description:
           'MoFA核心团队线上答疑，回答黑客松比赛里出现的问题',
+      },
+      {
+        title: '3月16日 20:00 （暂定） 魔法学院 - Moly & Dora介绍',
+        description:
+          'Moly为MoFA提供了用户界面，Dora为MoFA提供了分布式计算能力',
       },
       {
         title: '3月22日 20:00 Office Hour',
@@ -227,15 +212,15 @@ const metadata = {
     items={[
       {
         title: '完成度和可行性',
-        description: '您的智能体必须能够真实运行',
+        description: '您的智能体必须能够真实运行，有完整的开源代码仓，并有文档说明和演示视频',
       },
       {
         title: '技术质量',
-        description: '您的智能体代码质量好，效率高，技术含量高。',
+        description: '您的智能体代码质量好，效率高，技术含量高。这是一个开源软件开发者的大赛',
       },
       {
         title: '创新性',
-        description: '您的智能体展示了前所未有的创新性，对搜索技术的发展有独特的意义',
+        description: '您的智能体体现了您的创新思维，展示了您前所未有的新颖性，对搜索技术的发展有独特的意义',
       },
     ]}
     image={{
@@ -244,7 +229,7 @@ const metadata = {
     }}
   >
     <Fragment slot="content">
-      开发者评审团队：您的作品将由资深的开源开发者进行评审。包括：
+      由软件开发者评审团队：您的作品将由来自于多个开源项目资深的开源软件开发者进行评审。包括：
         来自Dora、MoFA、Moly、Moxin等团队的中外开发者。       
      </Fragment>
 
@@ -265,7 +250,7 @@ const metadata = {
       },
       {
         title: '提交平台',
-        description: '将您的代码项目和一个包涵项目简介和智能体运行的录屏视频提交到GitHub或GitCode，项目设置为公开。License设置为MIT，并通知组委会您的代码仓地址',
+        description: '将您的代码项目和一个包涵项目简介和智能体运行的录屏讲解视频提交到GitHub或GitCode，项目设置为公开。License设置为Apache 2，并通知组委会您的代码仓地址',
       },
     ]}
     image={{
@@ -277,7 +262,7 @@ const metadata = {
       <ul class="list-disc pl-6">
         <li>创建一个简短的演示文稿或视频来解释你的项目。</li>
         <li>包括测试应用程序的说明。</li>
-        <li>评审人员可能要求你演示，并请准备回答问题</li>
+        <li>评审人员联系您并可能要求你演示，并请准备回答问题</li>
       </ul>
     </Fragment>
   </Content>
@@ -305,20 +290,15 @@ const metadata = {
       },
       {
         title: 'LLM APIs',
-        description: '我们为参赛者提供大语言模型API算力劵',
+        description: '我们为参赛者提供LLM API Key，详情可咨询大赛组织者',
         icon: 'flat-color-icons:template',
       },
       {
         title: 'Technical Support',
-        description: '联系MoFA核心开发团队.',
+        description: '可通过选手群联系MoFA核心开发团队以获取技术支持',
         icon: 'flat-color-icons:template',
       },
-      {
-        title: 'Community Channel',
-        description: 'Connect with other participants on Slack for real‑time collaboration.',
-        icon: 'flat-color-icons:advertising',
-      },
-    ]}
+     ]}
   >
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
